Fix logo size and dark mode toggle on mobile

--- a/src/css/_nav.scss
+++ b/src/css/_nav.scss
@@ -169,11 +169,11 @@ body.dark {
       margin-right: 1rem;
     }
   }
-  /*
   #themeSwitchWrapper {
-    display: none !important;
+    margin-right: 3rem;
+  
+    svg {display: none;}
   }
-  */
 }
 
 /**
